JG-2004-05-10-0: Testsuite: Fixed test system_tests/qmaster/size.

CR-2004-05-10-0: Bugfix:    commlib:
                               o cl_commlib_receive_message() will now trigger
                                 communication estabilshment when connection 
                                 list is empty. The application will not have to
                                 react (sleep/trigger) this case when it acts as
                                 a service.
                               o fixed test_cl_endpoint_list application
                               o enhancements to test_virtual_xxx applications

CR-2004-05-07-0: Bugfix:    commlib:
                               o forbid to create a service handle with 
                                 component id 0
                               o when a new connected client doesn't write any
                                 data (is just listening) after connection 
                                 establishment a read timeout appeared at
                                 service component and the connection was 
                                 closed because of read timeout error.
                               o added code to ensure that an application will
                                 not go into an endless loop when a connection
                                 can't be opened (endless application calls to
                                 cl_commlib_receive_message() in a while loop
                                 without guilty communication endpoint).
                 Changed:   commlib

DT-2004-04-07-1: Bugfix:    o Added test to test_drmaa for invalid attributes
                            o Did cleanup related to 966
                            o Added Java DRMAA binding to aimk and distinst
                            - use aimk -jdrmaa to include the Java binding in
                              libdrmaa.so and to build drmaa.jar